use flexbox + gap to avoid hacky margin abuse

--- a/static/style.css
+++ b/static/style.css
@@ -41,10 +41,6 @@ input[size="1"] {
     text-align: center;
 }
 
-label:not(:first-of-type, br + label) {
-    margin-inline-start: 1em;
-}
-
 fieldset p:first-of-type {
     margin-block-start: 0.5em;
 }
@@ -71,4 +67,14 @@ textarea {
 
 [hidden] {
     display: none;
+}
+
+details > div {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1em;
+}
+
+[br] {
+    flex-basis: 100%;
 }
